# ContactLegEstimator

./: .gitignore  CMakeLists.txt  motion_equation.ipynb
cpp/: Config.hpp  DisturbanceObserver.cpp  DisturbanceObserver.hpp  main.cpp  quadruped_dynamics.cpp  quadruped_dynamics.hpp
python/: Analysis_ObserverResult.py  Config.py  generate_cpp_dynamics.py  motion_equation.ipynb  tools.py
saved_equations/: equations_dill.pkl
